--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
+    "react-swipeable": "^7.0.2",
     "swiper": "^12.1.0",
     "zod": "^4.3.6"
   },
