--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-swipeable": "^7.0.2",
     "swiper": "^12.1.0",
